# data-connector

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  RETENTION_POLICY.md  alembic.ini  cargo_output.txt  check_output.txt  docker-compose.dev.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_chunks_table.py
app/: __init__.py  config.py  exceptions.py  main.py  schemas.py
connectors/: __init__.py  base.py  bitbucket.py  dropbox.py  github.py  gitlab.py  google_drive.py  local_file.py  onedrive.py  registry.py
db/: __init__.py  models.py  session.py
docs/: AUTH0_SETUP.md  README.md  api-reference.md  architecture.md  configuration.md  connectors.md
messaging/: __init__.py  bloom_filter.py  circuit_breaker.py  kafka_consumer.py  kafka_producer.py  message_router.py  priority_queue.py  rabbit_client.py
routes/: __init__.py  connectors.py  health.py  legacy.py  oauth.py  sync.py  webhooks.py
services/: __init__.py  chunker_client.py  s3_client.py  sync_service.py
src/: config.rs  error.rs  main.rs
src/api/: data_sources.rs  documents.rs  github.rs  github_app.rs  health.rs  local_sync.rs  mod.rs  repositories.rs  response.rs
src/clients/: auth.rs  chunker.rs  github_api.rs  mod.rs
src/domain/: mod.rs  models.rs  sync.rs
src/domain/connectors/: bitbucket.rs  dropbox.rs  github.rs  gitlab.rs  google_drive.rs  local_file.rs  mod.rs  slack.rs  url_scraper.rs
src/middleware/: mod.rs
src/storage/: memory.rs  mod.rs
tests/: __init__.py  conftest.py  test_health.py
tools/: __init__.py  cleanup_worker.py
workers/: __init__.py  celery_app.py  sync_tasks.py
