[package]
name = "data-service"
version = "0.1.0"
edition = "2021"
description = "ConHub Data Ingestion Microservice"
authors = ["ConHub Team"]

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# JWT
jsonwebtoken = "9"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Filesystem
walkdir = "2"

# Base64 encoding (for GitHub API)
base64 = "0.22"

# MIME type detection
mime_guess = "2"
